--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/Nuevo.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/Nuevo.cshtml
@@ -274,7 +274,7 @@
                         <div class="col-md-3">
                             <div class="form-group">
                                 <div>
-                                    Credito disponible:
+                                    Credito disponible (En litros):
                                     <input name="CreditoDisponibleMonto" class="form-control" type="number" />
                                 </div>
                             </div>
